<resources>
    <string name="app_name">RegistroCelular</string>
    <string name="action_settings">Settings</string>
    <string name="registrar">REGISTRAR</string>
    <string name="cod">Codigo del certificado</string>
    <string name="nombre">Nombre del celular</string>
    <string name="marca">Marca del celular</string>
    <string name="color">Color de celular</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">BORRAR</string>
    <string name="error1">Digite el codigo de certificacion!</string>
    <string name="error1_1">Codigo existente!</string>
    <string name="error2">Digite el nombre del celular!</string>
    <string name="error3">Digite la marca del celular!</string>
    <string name="error4">Digite el color del celular!</string>
    <string name="mensaje1">Celular guardado exitosamente!</string>
    <string name="buscar">BUSCAR</string>
</resources>
